fix: css overflow
https://stackoverflow.com/questions/63639724/canvas-grows-in-size-when-fitting-to-flex-container-size

--- a/front/src/assets/main.scss
+++ b/front/src/assets/main.scss
@@ -13,5 +13,4 @@ div#app {
   width: 100vw;
   display: flex;
   flex-flow: column;
-  overflow: hidden;
 }
